k8s-manifests/atlantis/atlantis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  namespace: default
spec:
  selector:
    app: atlantis
  ports:
  - port: 80
    targetPort: 4141
  type: ClusterIP
